# airflow-salesforce-plugin

./: .coveragerc  .gitattributes  .gitignore  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: airflow_salesforce_plugin.hooks.rst  airflow_salesforce_plugin.hooks.salesforce_hook.rst  airflow_salesforce_plugin.operators.rst  airflow_salesforce_plugin.operators.salesforce_attachment_to_s3_operator.rst  airflow_salesforce_plugin.operators.salesforce_to_file_operator.rst  airflow_salesforce_plugin.operators.salesforce_to_s3_operator.rst  airflow_salesforce_plugin.plugin.rst  airflow_salesforce_plugin.rst  conf.py  index.rst
src/airflow_salesforce_plugin/: __init__.py  plugin.py  plugins_manager.py
src/airflow_salesforce_plugin/hooks/: __init__.py  salesforce_hook.py
src/airflow_salesforce_plugin/operators/: __init__.py  salesforce_attachment_to_s3_operator.py  salesforce_to_file_operator.py  salesforce_to_s3_operator.py
tasks/: __init__.py
tests/: conftest.py  strategies.py  test_hooks.py  test_operators.py  test_utils.py
tests/fixtures/http/: account.json  case.json  note.json  user.json
tests/fixtures/sql/: account.sql  accounts_supported__c.sql  case.sql  contact.sql  note.sql  user.sql
