[metadata]
name = airflow-salesforce-plugin
package_name = airflow_salesforce_plugin
version = attr: airflow_salesforce_plugin.__version__
description = Salesforce plugin for Apache Airflow
url = https://github.com/techalchemy/airflow-salesforce-plugin
author = Dan Ryan Team
long_description = file: README.rst
license = MIT License
keywords =
    apache
    airflow
    salesforce
    plugin
platforms = any
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Operating System :: POSIX
    Natural Language :: English

[options.extras_require]
dev =
    apache-airflow[s3,postgres]<=1.10.3
    invoke
    pre-commit
    mypy;python_version>="3.5"
    isort
    flake8
    flake8-bugbear;python_version>="3.5"
    rope
    black;python_version>="3.6"
tests =
    pytest
    pytest-cov
    pytest-xdist
    pytest-timeout
    twine
    readme-renderer[md]
    hypothesis
    requests-mock
csvfiles =
    cython
    numexpr
    bottleneck
    xarray
    scipy
    pandas
docs =
    parver
    sphinx
    sphinx-autodoc-types
    sphinx-rtd-theme

[options]
zip_safe = true
python_requires = >=3.6
setup_requires =
    setuptools>=40.8.0
    wheel>=0.33.4
install_requires =
    simple-salesforce
    sqlparse
    botocore


[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -ra --flake8 -n 4 --cov
testpaths = tests/
norecursedirs = .* build dist news tasks docs tests/fixtures
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
ignore = D203,F401,E123,E203,W503,E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13


[isort]
atomic = true
not_skip = __init__.py
line_length = 90
indent = '    '
multi_line_output = 3
known_third_party =airflow,hypothesis,invoke,pandas,parver,pytest,requests,requests_mock,setuptools,simple_salesforce,sqlparse,vcr
known_first_party = airflow_salesforce_plugin
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.7
